--- a/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "CreateBDC";
 }
 <h2>BreakDown Cost Create</h2>
+<script src="@Url.Content("~/Scripts/CUDS/BDC/CreateBDC.js")" type="text/javascript"></script>
 <table>
     <tr>
         <td>
@@ -11,14 +12,8 @@
     </tr>
 </table>
 @*<br />*@
-@* -------------------------------------- modal dialog-------------------------------- *@
-<link href="@Url.Content("~/Content/Dialog/dialogstyle.css")" rel="stylesheet" type="text/css" />
-<link href="@Url.Content("~/Content/Tab/easy-responsive-tabs.css")" rel="stylesheet" type="text/css" />
-<script src="@Url.Content("~/Scripts/Tab/easyResponsiveTabs.js")" type="text/javascript"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<link href="@Url.Content("~/Content/editable/tablestyle.css")" rel="stylesheet" type="text/css" />
-
   <!-- Modal -->
+@*//===================================================================Bootstrap*@
 <div class="modal fade" id="quotationDialog" role="dialog">
     <div class="modal-dialog">
 
@@ -48,6 +43,7 @@
     </div>
 </div>
 
+@*//===================================================================CSS w3school*@
 <div id="myModal">
 
     @using (Html.BeginForm())
@@ -84,7 +80,7 @@
                     </li>
                     <br />
                 </ul>
-
+ @*//===================================================================CSS w3school*@
             <table class="tabbar">
                 <tr>
                     <td>
@@ -264,76 +260,3 @@
         </form>
     }
 </div>
-<script>
-    $(document).ready(function () {
-        $("#quotationBody").on("click", "tr", function (e) {
-            $("#txtQuoNo").val($(this).find("td:eq(2)").text());
-            $("#hidQuoID").val($(this).find("td:eq(1)").text());
-        })
-
-        $.ajax(
-           {
-               url: 'http://localhost:13131/api/Quotation',
-               type: 'GET',
-               datatype: 'json',
-               success: function (data) {
-                   data = JSON.parse(data);
-                   var html = '';
-                   for (var i = 0; i < data.Table.length; i++) {
-                       html += '<tr>';
-                       html += '<td data-dismiss="modal">' + data.Table[i].RowNum + '</td>';
-                       html += '<td class="hidecolumn" data-dismiss="modal">' + data.Table[i].ID + '</td>';
-                       html += '<td data-dismiss="modal">' + data.Table[i].QuoNo + '</td>';
-                       html += '<td data-dismiss="modal">' + data.Table[i].Detail + '</td>';
-                       html += '<td data-dismiss="modal">' + data.Table[i].Name + '</td>';
-                       html += '<td data-dismiss="modal">' + data.Table[i].Price + '</td>';
-                       html += '</tr>';
-                   }
-                   document.getElementById("quotationBody").innerHTML = html;
-               },
-               error: function (msg) {
-                   alert(msg)
-               }
-           });
-
-        $("#Create").click(function () {
-            var dataObject = {
-                Docver: 1, QuotationNo: $("#hidQuoID").val(), Price: $("#txtPrice").val(), Cost: $("#txtCost").val(),
-                Profit: $("#txtProfit").val(), Remark: $("#txtRemark").val()
-            };
-            console.log(dataObject);
-            $.ajax(
-            {
-                url: 'http://localhost:13131/api/BDC/Post',
-                type: 'POST',
-                data: dataObject,
-                datatype: 'json',
-
-                success: function (result) {
-                    alert('Create is completed')
-                    window.location.href = "../BDC/IndexBDC";
-                }
-                ,
-                error: function (msg) {
-                    alert(msg)
-                }
-            });
-        });
-
-        $('#parentHorizontalTab').easyResponsiveTabs({
-            type: 'default', //Types: default, vertical, accordion
-            width: 'auto', //auto or any width like 600px
-            fit: true, // 100% fit in a container
-            tabidentify: 'hor_1', // The tab groups identifier
-            activate: function (event) { // Callback function if tab is switched
-                var $tab = $(this);
-                var $info = $('#nested-tabInfo');
-                var $name = $('span', $info);
-                $name.text($tab.text());
-                $info.show();
-            }
-        });
-
-    });
-
-</script>
