--- a/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
@@ -4,6 +4,7 @@
 }
 
 <h2>BreakDown Cost Edit</h2>
+<script src="@Url.Content("~/Scripts/CUDS/BDC/EditBDC.js")" type="text/javascript"></script>
 <table>
     <tr>
         <td>
@@ -12,13 +13,8 @@
     </tr>
 </table>
 @*<br />*@
-@* -------------------------------------- modal dialog-------------------------------- *@
-<link href="@Url.Content("~/Content/Dialog/dialogstyle.css")" rel="stylesheet" type="text/css" />
-<link href="@Url.Content("~/Content/Tab/easy-responsive-tabs.css")" rel="stylesheet" type="text/css" />
-<script src="@Url.Content("~/Scripts/Tab/easyResponsiveTabs.js")" type="text/javascript"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<link href="@Url.Content("~/Content/editable/tablestyle.css")" rel="stylesheet" type="text/css" />
 
+@*//===================================================================Bootstrap*@
 <div class="modal fade" id="quotationDialog" role="dialog">
     <div class="modal-dialog">
 
@@ -48,6 +44,7 @@
     </div>
 </div>
 
+@*//===================================================================CSS w3school*@
 <div id="myModal">
 
     @using (Html.BeginForm())
@@ -85,7 +82,7 @@
                 </li>
                 <br />
             </ul>
-
+            @*//===================================================================CSS w3school*@
             <table class="tabbar">
                 <tr>
                     <td>
@@ -249,6 +246,8 @@
                                             </div>
                                         </div>
                                     </div>
+
+
                                 </div>
                             </div>
                         </div>
@@ -265,75 +264,13 @@
 </div>
 
 <script type="text/javascript">
+
     $(document).ready(function () {
-        $("#quotationBody").on("click", "tr", function (e) {
-            $("#txtQuoNo").val($(this).find("td:eq(2)").text());
-            $("#hidQuoID").val($(this).find("td:eq(1)").text());
-        })
 
-        $.ajax(
-           {
-               url: 'http://localhost:13131/api/Quotation',
-               type: 'GET',
-               datatype: 'json',
-               success: function (data) {
-                   data = JSON.parse(data);
-                   var html = '';
-                   for (var i = 0; i < data.Table.length; i++) {
-                       html += '<tr>';
-                       html += '<td data-dismiss="modal">' + data.Table[i].RowNum + '</td>';
-                       html += '<td class="hidecolumn" data-dismiss="modal">' + data.Table[i].ID + '</td>';
-                       html += '<td data-dismiss="modal">' + data.Table[i].QuoNo + '</td>';
-                       html += '<td data-dismiss="modal">' + data.Table[i].Detail + '</td>';
-                       html += '<td data-dismiss="modal">' + data.Table[i].Name + '</td>';
-                       html += '<td data-dismiss="modal">' + data.Table[i].Price + '</td>';
-                       html += '</tr>';
-                   }
-                   document.getElementById("quotationBody").innerHTML = html;
-               },
-               error: function (msg) {
-                   alert(msg)
-               }
-           });
+        GetData(@Request.Params["id"]);
 
-        var id= @Request.Params["id"];
-        $.ajax(
-       {
-           url: 'http://localhost:13131/api/BDC/'+id,
-           type: 'GET',
-           datatype: 'json',
-           success: function (data) {
-               data = JSON.parse(data);
-               $("#txtDocver").val(data.Table[0].Docver),$("#txtQuoNo").val(data.Table[0].QuoNo),$("#txtPrice").val(data.Table[0].Price)
-               ,$("#txtCost").val(data.Table[0].Cost),$("#txtProfit").val(data.Table[0].Profit),$("#txtRemark").val(data.Table[0].Remark);
-           },
-           error: function (msg) {
-               alert(msg);
-           }
-
-       });
-
-        $("#Update").click(function () {
-            var dataObject = { ID: @Request.Params["id"], Docver: 1, QuotationNo: $("#hidQuoID").val(), Price: $("#txtPrice").val(), Cost: $("#txtCost").val(),
-                Profit: $("#txtProfit").val(), Remark: $("#txtRemark").val()};
-            console.log(dataObject);
-            $.ajax(
-            {
-                url: 'http://localhost:13131/api/BDC/PUT',
-                type: 'PUT',
-                data: dataObject,
-                datatype: 'json',
-
-                success: function (result) {
-                    alert('Update is completed');
-                    top.location.href = "/BDC/IndexBDC";
-                }
-                ,
-                error: function (msg) {
-                    alert(msg);
-                    //top.location.href = "/ExpenseMaster/Index";
-                }
-            });
-        });
     });
+
+    $("#Update").click(function () { Update(@Request.Params["id"]); });
+
 </script>
