--- a/Alpha/AlphaMvc/Views/Employee/EditEmployee.cshtml
+++ b/Alpha/AlphaMvc/Views/Employee/EditEmployee.cshtml
@@ -10,15 +10,11 @@
         </td>
     </tr>
 </table>
-@* -------------------------------------- Tab, FormStyle-------------------------------- *@
-<link href="@Url.Content("~/Content/editable/tablestyle.css")" rel="stylesheet" type="text/css" />
-<link href="@Url.Content("~/Content/Tab/easy-responsive-tabs.css")" rel="stylesheet" type="text/css" />
-<script src="@Url.Content("~/Scripts/Tab/easyResponsiveTabs.js")" type="text/javascript"></script>
-@* -------------------------------------------------------------------------------------- *@
 
 <div id="myModal">
     @using (Html.BeginForm())
     {
+        //===================================================================CSS w3school
         <form>
             <ul class="form-style">
                 <li>
@@ -49,6 +45,7 @@
                 </li>
                 <br />
             </ul>
+            @*//===================================================================CSS Jquery*@
             <table class="tabbar">
                 <tr>
                     <td>
