--- a/Alpha/AlphaMvc/Views/IncomeMaster/CreateIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/CreateIncomeMaster.cshtml
@@ -4,10 +4,11 @@
 }
 
 <h2>Master Income Create</h2>
-<link href="@Url.Content("~/Content/editable/tablestyle.css")" rel="stylesheet" type="text/css" />
+<script src="@Url.Content("~/Scripts/CUDS/IncomeMaster/CreateIncomeMaster.js")" type="text/javascript"></script>
 <div id="container">
     @using (Html.BeginForm())
     {
+        ////===================================================================CSS w3school
         <form>
             <ul class="form-style">
                 <li>
@@ -25,27 +26,3 @@
         </form>
     }
 </div>
-<script type="text/javascript">
-    $(document).ready(function () {
-
-        $("#Create").click(function () {
-            var dataObject = { Detail: $("#Detail").val() };
-            $.ajax(
-            {
-                url: 'http://localhost:13131/api/IncomeMaster',
-                type: 'POST',
-                data: dataObject,
-                datatype: 'json',
-
-                success: function (result) {
-                    alert('Create is completed')
-                    window.location.href = "../IncomeMaster/Index";
-                }
-                ,
-                error: function (msg) {
-                    alert(msg)
-                }
-            });
-        });
-    });
-</script>
