--- a/Alpha/AlphaMvc/Views/IncomeMaster/EditIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/EditIncomeMaster.cshtml
@@ -4,10 +4,10 @@
 }
 
 <h2>Master Income Edit</h2>
-<link href="@Url.Content("~/Content/editable/tablestyle.css")" rel="stylesheet" type="text/css" />
-
+<script src="@Url.Content("~/Scripts/CUDS/IncomeMaster/EditIncomeMaster.js")" type="text/javascript"></script>
     @using (Html.BeginForm())
     {
+        //===================================================================CSS w3school
         <form>
             <ul class="form-style">
                 <li>
@@ -24,45 +24,15 @@
         </form>
 
     }
-
 <script type="text/javascript">
 
     $(document).ready(function () {
-        var dataObject = { ID : @Request.Params["id"]};
-        $.ajax(
-       {
-           url: 'http://localhost:13131/api/IncomeMaster/',
-           type: 'GET',
-           data : dataObject,
-           datatype: 'json',
-           success: function (data) {
-               data = JSON.parse(data);
-               $("#Detail").val(data.Table[0].Detail);
-           },
-           error: function (msg) {
-               alert(msg);
-           }
 
-       });
+        GetData(@Request.Params["id"]);
 
-        $("#Update").click(function () {
-            var dataObject = { ID: @Request.Params["id"], Detail: $("#Detail").val() };
-            $.ajax(
-            {
-                url: 'http://localhost:13131/api/IncomeMaster/Put',
-                type: 'PUT',
-                data: dataObject,
-                datatype: 'json',
-                success: function (result) {
-                    alert('Update is completed');
-                    window.location.href = "/IncomeMaster/IndexIncomeMaster";
-                }
-                ,
-                error: function (msg) {
-                    alert(msg);
-                    top.location.href = "/ExpenseMaster/Index";
-                }
-            });
-        });
     });
+
+    $("#Update").click(function () { Update(@Request.Params["id"]); });
+
 </script>
+
