--- a/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
@@ -3,16 +3,8 @@
 }
 
 <h2>Master Income</h2>
+<script src="@Url.Content("~/Scripts/CUDS/IncomeMaster/IndexIncomeMaster.js")" type="text/javascript"></script>
 @* ------------------------------- Header -------------------------------*@
-<table class="barattach-2">
-    <tr>
-        <td>
-            <a href="/IncomeMaster/CreateIncomeMaster"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" class="imgadd-2" /></a>
-            <div class="topicattach-2">Search : <input id="searchInput" placeholder="Type To Filter"><br /></div>
-        </td>
-    </tr>
-</table>
-
 <style>
     .paging-nav {
         text-align: right;
@@ -41,7 +33,15 @@
         font-family: Arial, sans-serif;
     }
 </style>
-
+<table class="barattach-2">
+    <tr>
+        <td>
+            <a href="/IncomeMaster/CreateIncomeMaster"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" class="imgadd-2" /></a>
+            <div class="topicattach-2">Search : <input id="searchInput" placeholder="Type To Filter"><br /></div>
+        </td>
+    </tr>
+</table>
+@*//===================================================================CSS w3school*@
     <table class="table table-striped">
         <thead class="bgthead">
             <tr>
@@ -53,91 +53,3 @@
         </thead>
         <tbody id="result"></tbody>
     </table>
-
-
-<script>
-    $(document).ready(function () {
-        //------------------------------------ Standard ------------------------------------
-            //Sorting
-            $('th').click(function () {
-                var table = $(this).parents('table').eq(0)
-                var rows = table.find('tr:gt(0)').toArray().sort(comparer($(this).index()))
-                this.asc = !this.asc
-                if (!this.asc) { rows = rows.reverse() }
-                for (var i = 0; i < rows.length; i++) { table.append(rows[i]) }
-            })
-            function comparer(index) {
-                return function (a, b) {
-                    var valA = getCellValue(a, index), valB = getCellValue(b, index)
-                    return $.isNumeric(valA) && $.isNumeric(valB) ? valA - valB : valA.localeCompare(valB)
-                }
-            }
-            function getCellValue(row, index) { return $(row).children('td').eq(index).html() }
-
-            //filter
-            $("#searchInput").keyup(function () {
-                $("#result").find("tr").hide();
-                var data = this.value.split(" ");
-                var jo = $("#result").find("tr");
-                $.each(data, function (i, v) {
-                    jo = jo.filter("*:contains('" + v + "')");
-                });
-                jo.show();
-
-            }).focus(function () {
-                $(this).css({ "color": "black" });
-                $(this).unbind('focus');
-            }).css({ "color": "#C0C0C0" });
-
-//------------------------------------ Custom ------------------------------------
-
-            $.ajax(
-            {
-                url: 'http://localhost:13131/api/IncomeMaster',
-                type: 'GET',
-                datatype: 'json',
-                success: function (data) {
-                    data = JSON.parse(data);
-                    var html = '';
-                    for (var i = 0; i < data.Table.length; i++) {
-                        html += '<tr>';
-                        html += '<td>' + data.Table[i].RowNum + '</td>';
-                        html += '<td class="hidecolumn">' + data.Table[i].ID + '</td>';
-                        html += '<td>' + data.Table[i].Detail + '</td>';
-                        html += '<td>';
-                        html += '<a href="/IncomeMaster/EditIncomeMaster?id=' + data.Table[i].ID + '" id="edit' + data.Table[i].ID + '">' + '<img src="@Url.Content("~/Images/edit.png")"/></a>';
-                        html += '<a href="#" id="del' + data.Table[i].ID + '" onclick = " RowDelete(' + data.Table[i].ID + ') " >' + '<img src="@Url.Content("~/Images/delete.png")" /></a>';
-                        html += '</td>';
-                        html += '</tr>';
-                    }
-                    document.getElementById("result").innerHTML = html;
-
-                },
-                error: function (msg) {
-                    alert(msg)
-                }
-            });
-
-        });
-
-    function RowDelete(id) {
-        var dataObject = { ID: id };
-        $.ajax(
-            {
-                url: 'http://localhost:13131/api/IncomeMaster',
-                type: 'DELETE',
-                data: dataObject,
-                datatype: 'json',
-
-                success: function (result) {
-                    alert('Delete is completed')
-                    window.location.href = "../IncomeMaster/IndexIncomeMaster";
-                }
-                ,
-                error: function (msg) {
-                    alert(msg)
-                }
-
-            });
-        }
-</script>
