--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -3,28 +3,27 @@
     <head>
         <meta charset="utf-8" />
         <title>@ViewBag.Title - My ASP.NET MVC Application</title>
-    
-        
         @*---------------------------- Default --------------------------*@
         <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
         <link href="@Url.Content("~/Content/Style.css")" rel="stylesheet" type="text/css" />
-        <link href="@Url.Content("~/Content/themes/base/jquery.ui.all.css")" rel="stylesheet" type="text/css" />
         <link href="@Url.Content("~/Content/jquery-ui.css")" rel="stylesheet" type="text/css" />
         <script src="@Url.Content("~/Scripts/jquery-1.12.4.js")" type="text/javascript"></script>
-
-         @*---------------------------- Menu,Table --------------------------*@
+        @*---------------------------- Menu,Table --------------------------*@
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
-        <link href="@Url.Content("~/Content/editable/datagrid.css")" rel="stylesheet" type="text/css" />
-        <link href="@Url.Content("~/Content/hidegrid.css")" rel="stylesheet" type="text/css" />
         <link href="@Url.Content("~/Content/menu.css")" rel="stylesheet" type="text/css" />
-
         @* ---------------------------- menu -------------------------- *@
         <link href="@Url.Content("~/Content/custom.css")" rel="stylesheet" type="text/css" />
         <script src="@Url.Content("~/Scripts/bootstrap.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/bootstrap.min.js")" type="text/javascript"></script>
-
         @* ---------------------------- NumberFormat -------------------------- *@
         <script src="@Url.Content("~/Scripts/NumberFormat/jquery.number.js")" type="text/javascript"></script>
+        @* ---------------------------- Tab -------------------------- *@
+        <link href="@Url.Content("~/Content/Tab/easy-responsive-tabs.css")" rel="stylesheet" type="text/css" />
+        <script src="@Url.Content("~/Scripts/Tab/easyResponsiveTabs.js")" type="text/javascript"></script>
+        @* ---------------------------- Dynamictable -------------------------- *@
+        <link href="@Url.Content("~/Content/editable/addrowstyle.css")" rel="stylesheet" type="text/css" />
+        <script src="@Url.Content("~/Scripts/EditableGrid/highlight.min.js")" type="text/javascript"></script>
+        <script src="@Url.Content("~/Scripts/EditableGrid/jquery.dynotable.js")" type="text/javascript"></script>
 
         <script language="javascript" type="text/javascript">
         $(function () {
@@ -39,12 +38,6 @@
                 x.className = "topnav";
             }
         }
-        //$(document).ready(function () {
-        //    $("#myModal").modal(
-        //        {
-        //            backdrop:'static',
-        //        });
-        //});
         </script>
         @* ---------------------------- menu -------------------------- *@
         <meta name="viewport" content="width=device-width">
