--- a/Alpha/AlphaMvc/Content/Style.css
+++ b/Alpha/AlphaMvc/Content/Style.css
@@ -398,7 +398,15 @@ select{
     float: left;
     margin-right: 30%;
 }
-
+.form-style-1 .label-3 {
+    margin: 0 0 3px 0;
+    padding: 0px;
+    display: block;
+    font-weight: bold;
+    float: right;
+    margin-right: 25%;
+    margin-top: 2%;
+}
 .form-style-1 .label-4 {
     margin: 0 0 3px 0;
     padding: 0px;
@@ -816,6 +824,7 @@ select{
 }
 .imgadd{
     margin-left:10px;
+    margin-top: 10px;
 }
 .imgadd-2{
     margin-left:10px;
