--- a/Alpha/AlphaMvc/Views/JobOrder/IndexJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/IndexJobOrder.cshtml
@@ -8,7 +8,7 @@
 <table class="barattach-2">
     <tr>
         <td>
-            <div class="topicattach-2">Search : <input id="searchInput" placeholder="Type To Filter"><br /></div>
+            <div class="topicattach-2">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
             <a href="/JobOrder/CreateJobOrder"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" class="imgadd" /></a>
         </td>
     </tr>
