--- a/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
@@ -6,7 +6,6 @@
 <h2>
     Product Edit
 </h2>
-<link href="@Url.Content("~/Content/editable/tablestyle.css")" rel="stylesheet" type="text/css" />
 <script src="@Url.Content("~/Scripts/CUDS/Products/EditProducts.js")" type="text/javascript"></script>
 <style>
     table {
@@ -62,7 +61,8 @@
             </ul>
             <ul class="form-style-1">
                 <li>
-                    <button class="button"></button>
+                    <input type="file" name="photo" id="photo" onchange="readURL(this);">
+                    <img id="imgPreview" src="#" alt="your image" />
                 </li>
                 <li>
                     <label>หมายเหตุ<span class="required">*</span></label>
@@ -176,6 +176,8 @@
 
     });
 
-    $("#Update").click(function () { Update(@Request.Params["id"]); });
+    $("#Update").click(function () {
+        Update(@Request.Params["id"]);
+    });
 </script>
 
