--- a/Alpha/AlphaMvc/Views/Technician/CreateTechnician.cshtml
+++ b/Alpha/AlphaMvc/Views/Technician/CreateTechnician.cshtml
@@ -1,6 +1,6 @@
-﻿@model AlphaMvc.Models.EmployeeModels
+﻿@model AlphaMvc.Models.TechnicianModels
 @{
-    ViewBag.Title = "CreateEmployee";
+    ViewBag.Title = "CreateTechnician";
 }
 
 <h2>Create</h2>
