--- a/Alpha/AlphaMvc/Views/Login/IndexLogin.cshtml
+++ b/Alpha/AlphaMvc/Views/Login/IndexLogin.cshtml
@@ -5,32 +5,23 @@
 
 @*<h2>Index</h2>*@
 @* ------------------------------------------- login -------------------------------------- *@
-<link href="@Url.Content("https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css")" rel="stylesheet" type="text/css" />
-<script src="@Url.Content("https://code.jquery.com/ui/1.12.1/jquery-ui.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://code.jquery.com/jquery-1.12.4.js")" type="text/javascript"></script>
 <link href="@Url.Content("~/Content/LoginStyle.css")" rel="stylesheet" type="text/css" />
-<script language="javascript" type="text/javascript">
-            $(document).ready(function () {
-                $("#dialog").dialog({
-                    modal: true
-                });
-            });
-</script>
 @* -------------------------------------------- form login ----------------------------------- *@
-
-<form action="action_page.php" id="dialog">
+<script src="@Url.Content("~/Scripts/CUDS/UserLogin/IndexUserLogin.js")" type="text/javascript"></script>
+<form id="dialog" method="post">
         <div class="imgcontainer">
             <img src="@Url.Content("~/images/img_avatar2.png")" alt="Avatar" class="avatar"/>
         </div>
 
         <div class="container">
             <label><b>Username</b></label>
-            <input type="text" placeholder="Enter Username" name="uname" required>
+            <input type="text" id="txtUserName" placeholder="Enter Username" name="uname" required>
             <br />
             <label><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="psw" required>
+            <input type="password" id="txtpassword" placeholder="Enter Password" name="psw" required>
             <br />
-            <button type="submit">@Html.ActionLink("Login", "Index", "Home")</button>
+            <button type="submit" value="Login" id="UserLogin"></button>
+            @*<button type="submit">@Html.ActionLink("Login", "Index", "Home")</button>*@
             <input type="checkbox" checked="checked"> Remember me
         </div>
 
