--- a/Alpha/AlphaMvc/Views/Shared/Login.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/Login.cshtml
@@ -6,13 +6,13 @@
         <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
         <link href="@Url.Content("~/Content/Style.css")" rel="stylesheet" type="text/css" />
         <link href="@Url.Content("~/Content/themes/base/jquery.ui.all.css")" rel="stylesheet" type="text/css" />
-        <link href="@Url.Content("~/Content/hidegrid.css")" rel="stylesheet" type="text/css" />
+        @*<link href="@Url.Content("~/Content/hidegrid.css")" rel="stylesheet" type="text/css" />*@
         <link href="@Url.Content("~/Content/menu.css")" rel="stylesheet" type="text/css" />
 
 
-        <script src="@Url.Content("~/Scripts/jquery-1.6.2.min.js")" type="text/javascript"></script>
+        <script src="@Url.Content("~/Scripts/jquery-1.12.4.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/jquery-ui-1.8.11.js")" type="text/javascript"></script>
-        <script src="@Url.Content("~/Scripts/modernizr-2.0.6-development-only.js")" type="text/javascript"></script>
+        @*<script src="@Url.Content("~/Scripts/modernizr-2.0.6-development-only.js")" type="text/javascript"></script>*@
         <script src="@Url.Content("~/Scripts/AjaxLogin.js")" type="text/javascript"></script>
 
         <meta name="viewport" content="width=device-width">
