--- a/Alpha/AlphaMvc/Views/Shared/Login.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/Login.cshtml
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
+        @*<meta http-equiv="Refresh" content="0; url=myurl">*@
         <title>@ViewBag.Title - My ASP.NET MVC Application</title>
         <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
         <link href="@Url.Content("~/Content/Style.css")" rel="stylesheet" type="text/css" />
@@ -11,14 +12,16 @@
 
 
         <script src="@Url.Content("~/Scripts/jquery-1.12.4.js")" type="text/javascript"></script>
-        <script src="@Url.Content("~/Scripts/jquery-ui-1.8.11.js")" type="text/javascript"></script>
+        @*<script src="@Url.Content("~/Scripts/jquery-ui-1.8.11.js")" type="text/javascript"></script>
+        <script src="@Url.Content("~/Scripts/AjaxLogin.js")" type="text/javascript"></script>*@
         @*<script src="@Url.Content("~/Scripts/modernizr-2.0.6-development-only.js")" type="text/javascript"></script>*@
-        <script src="@Url.Content("~/Scripts/AjaxLogin.js")" type="text/javascript"></script>
+        <script src="@Url.Content("~/Scripts/CUDS/UserLogin/IndexUserLogin.js")" type="text/javascript"></script>
 
         <meta name="viewport" content="width=device-width">
+        
 
     </head>
-    <body>
+    <body id="result">
         <header>
             <div class="content-wrapper">
                 </div>
@@ -33,3 +36,10 @@
         </div>
     </body>
 </html>
+
+<script type="text/javascript">
+function init()
+{
+    window.location = "http://localhost:1042/Technician/indexTechnician";
+}
+</script>
