--- a/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
@@ -256,7 +256,7 @@
             </table>
             <ul class="form-style-1">
                 <li>
-                    <input type="submit" value="Save" id="Update" />
+                    <input type="submit" value="Save" id="Update" onblur="Redirect()" />
                 </li>
             </ul>
         </form>
