--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -869,7 +869,7 @@
 
         <ul class="form-style-1">
             <li>
-                <input type="submit" value="Save" id="Update" />
+                <input type="submit" value="Save" id="Update" onblur="Redirect()"/>
             </li>
         </ul>
     </form>
