--- a/Alpha/AlphaMvc/Views/Login/IndexLogin.cshtml
+++ b/Alpha/AlphaMvc/Views/Login/IndexLogin.cshtml
@@ -7,7 +7,7 @@
 @* ------------------------------------------- login -------------------------------------- *@
 <link href="@Url.Content("~/Content/LoginStyle.css")" rel="stylesheet" type="text/css" />
 @* -------------------------------------------- form login ----------------------------------- *@
-@*<script src="@Url.Content("~/Scripts/CUDS/UserLogin/IndexUserLogin.js")" type="text/javascript"></script>*@
+<script src="@Url.Content("~/Scripts/CUDS/UserLogin/IndexUserLogin.js")" type="text/javascript"></script>
 <form id="dialog" method="post">
         <div class="imgcontainer">
             <img src="@Url.Content("~/images/img_avatar2.png")" alt="Avatar" class="avatar"/>
@@ -20,7 +20,7 @@
             <label><b>Password</b></label>
             <input type="password" id="txtpassword" placeholder="Enter Password" name="psw" required>
             <br />
-            <button type="submit" value="Login" id="UserLogin"></button>
+            <button type="submit" value="Login" id="UserLogin" onblur="Redirect()"></button>
             @*<button type="submit">@Html.ActionLink("Login", "Index", "Home")</button>*@
             <input type="checkbox" checked="checked"> Remember me
             
