--- a/Alpha/AlphaMvc/Views/Shared/Login.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/Login.cshtml
@@ -15,13 +15,12 @@
         @*<script src="@Url.Content("~/Scripts/jquery-ui-1.8.11.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/AjaxLogin.js")" type="text/javascript"></script>*@
         @*<script src="@Url.Content("~/Scripts/modernizr-2.0.6-development-only.js")" type="text/javascript"></script>*@
-        <script src="@Url.Content("~/Scripts/CUDS/UserLogin/IndexUserLogin.js")" type="text/javascript"></script>
 
         <meta name="viewport" content="width=device-width">
         
 
     </head>
-    <body id="result">
+    <body>
         <header>
             <div class="content-wrapper">
                 </div>
@@ -36,10 +35,3 @@
         </div>
     </body>
 </html>
-
-<script type="text/javascript">
-function init()
-{
-    window.location = "http://localhost:1042/Technician/indexTechnician";
-}
-</script>
