--- a/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
@@ -72,7 +72,7 @@
                 <li>
 
                     <input type="file" name="photo" id="photo" onchange="readURL(this);">
-                    <img id="imgPreview"  alt="your image" class="imgadd"  />
+                    <img id="imgPreview"  alt="your image" class="imgpreview"  />
                     
                 </li>
                 <li>
