--- a/Alpha/AlphaMvc/Content/Style.css
+++ b/Alpha/AlphaMvc/Content/Style.css
@@ -822,10 +822,10 @@ select{
     height: 40px;
     background-color: #5baa8c;
 }
-/*.imgadd{
+.imgadd{
     margin-left:10px;
     margin-top: 10px;
-}*/
+}
 
 .tabbar{
     margin-top: 0px;
