--- a/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/CreateBDC.cshtml
@@ -58,7 +58,7 @@
                     </li>
                     <li>
                         <label>ใบเสนอราคา</label>
-                        <input type="text" id = "txtQuoNo" name="txtQuoNo" class="field-select-big" placeholder="ใบเสนอราคา" disabled />&nbsp;<a href="#" data-toggle="modal" data-target="#quotationDialog" >
+                        <input type="text" id = "txtQuoNo" name="txtQuoNo" class="field-select-big" placeholder="ใบเสนอราคา"  readonly="readonly" required />&nbsp;<a href="#" data-toggle="modal" data-target="#quotationDialog" >
                         <img src="@Url.Content("~/Images/search-engine.png")" class="btnimage" />
                     </a>
                     <input type="hidden" id="hidQuoID" /></li>
