--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -871,8 +871,7 @@
 
             <ul class="form-style-1">
                 <li>
-                    <input type="submit" value="Save"  />
-                    @*id="Create"*@
+                    <input type="submit" value="Save" id="Create" />
                 </li>
             </ul>
         </form>
