--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -55,7 +55,7 @@
                     <input type="text" id="txtJobNo" name="field1" class="field-divided" placeholder="เลขที่ใบสั่งงาน" disabled />
                 </li>
                 <li>
-                    <input type="text" id="dtJobDate" class="field-divided" placeholder="วันที่" autofocus required />&nbsp;<input type="text" id="txtCar" name="field1" class="field-divided" placeholder="รถปิกอัพ" />
+                    <input type="text" id="dtJobDate" class="field-divided" placeholder="วันที่"  required />&nbsp;<input type="text" id="txtCar" name="field1" class="field-divided" placeholder="รถปิกอัพ" autofocus/>
                 </li>
                 <li>
                     <label class="label-2">วันเริ่มทำงาน</label>&nbsp;<label class="label-2">วันจบงาน</label>
